Fix issue with "My filters" pane on mobile
Related issue:
https://github.com/uBlockOrigin/uBlock-issues/issues/3058

--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -2,7 +2,6 @@ html, body {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    height: 100svh;
     justify-content: stretch;
     overflow: hidden;
     position: relative;
@@ -107,6 +106,9 @@ body.noDashboard #dashboard-nav {
     }
 
 /* touch-screen devices */
+:root.mobile, :root.mobile body {
+    height: 100svh;
+    }
 :root.mobile #dashboard-nav {
     flex-wrap: nowrap;
     overflow-x: auto;
